# tftp-client

./: .gitignore  README.md  pyproject.toml
src/tftp_client/: __init__.py  __main__.py  cli.py  client.py  protocol.py
tests/: test_protocol.py
