[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tftp-client"
version = "0.1.0"
description = "Cliente TFTP (RFC 1350) com CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tftp-client = "tftp_client.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
